--- a/Ujin.Web/ClientApp/src/app/ui-components/footer/footer.component.less
+++ b/Ujin.Web/ClientApp/src/app/ui-components/footer/footer.component.less
@@ -27,7 +27,7 @@
       text-align: justify;
       font-size: 1.3em;
       line-height: 1.4em;
-      color: @light-accent-color;
+      color: @light-grey-color;
     }
   }
 
